# mtg-deck-builder-calibration-runner

./: .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: calibration-shards.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260518_0001_initial_schema.py  20260519_0002_experiment_run_status_retry.py  20260610_0003_forge_ai_metadata.py
data/processed/forge_calibration/: empirical_forge_calibrator_27316910354.json  forge_outcome_model_27316910354.json
data/raw/: atraxa_corpus.csv
docker/: Dockerfile.forge  forge-entrypoint.sh
scripts/: merge_reports.py
src/deckbuilder/: __init__.py  cli.py  config.py  logging.py
src/deckbuilder/db/: __init__.py  models.py  session.py
src/deckbuilder/embedding/: encoder.py
src/deckbuilder/experiment/: forge_calibrator.py  metrics.py  orchestrator.py  structure.py
src/deckbuilder/forge/: decklist.py  parser.py  runner.py
src/deckbuilder/generator/: __init__.py  csp.py  roles.py  search.py
tests/: conftest.py
tests/fixtures/: forge_v2_B5_output.txt  sample_corpus.csv  sample_sim_output.txt  scryfall_oracle_subset.json
tests/integration/: test_awr_fit_acceptance.py  test_end_to_end_smoke.py  test_t8_t9_generator.py
tests/unit/: test_archidekt_commander_rule.py  test_config.py  test_encoder.py  test_forge_calibrator.py  test_forge_parser.py  test_generator_role_constraints.py  test_metrics.py  test_package_smoke.py  test_report_render.py  test_score_band_selection.py  test_scryfall_ingest.py  test_structure_diagnostics.py
(+16 files in other folders)
