[project]
name = "deckbuilder"
version = "0.5.0"
description = "AI Commander Deck Builder v0.5 critical experiment"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "ARIA" }]
dependencies = [
  "sqlalchemy==2.0.41",
  "alembic==1.16.1",
  "asyncpg==0.30.0",
  "psycopg[binary]==3.2.9",
  "pgvector==0.4.1",
  "sentence-transformers==4.1.0",
  "typer==0.16.0",
  "structlog==25.4.0",
  "pydantic-settings==2.9.1",
  "scikit-learn==1.7.0",
  "numpy==2.3.0",
  "pandas==2.3.0",
  "jinja2==3.1.6",
  "pytest==8.4.0",
  "ruff==0.11.13",
  "mypy==1.16.0",
  "pyrchidekt>=2.2.0",
]

[project.scripts]
deckbuilder = "deckbuilder.cli:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ARG", "C4", "DTZ", "ERA", "PIE", "PT", "PTH", "RET", "RSE", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["deckbuilder"]

[[tool.mypy.overrides]]
module = ["pgvector", "pgvector.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
